[package]
name = "app"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.27"
rfd = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
multipart = "0.18.0"
reqwest = { version = "0.12", features = ["multipart", "json"] }
